@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>TryXpath show all results</title>
+    <script src="../scripts/try_xpath_functions.js"></script>
     <script src="show_all_results.js"></script>
   </head>
 
